--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 			width: 80%;
 		}
 
-		@media only screen and (max-width: 1164px) {
+		@media only screen and (min-width: 100px) and (max-width: 1164px) {
 			.slicknav_menu {
 				display: block;
 			}
