--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 		.inner_main_menu ul li:nth-child(1) {float: left;}
 		.inner_main_menu ul li:nth-child(2) {float: left;}
 		.inner_main_menu ul li:nth-child(3) {float: left;}
+		.inner_main_menu ul li:nth-child(4) {float: left;}
 		.inner_main_menu ul li a {
 			color: #fff;
 			font-size: 20px;
@@ -230,6 +231,7 @@
 						<li><a href="">Dropdown Menu 4</a></li>
 					</ul>
 				</li>
+				<li><a href="">My Portfolio</a></li>
 				<li><a href="">Blog</a></li>
 				<li><a href="">Contact</a></li>
 				<li><a href="">Map</a></li>
