--- a/index.html
+++ b/index.html
@@ -231,18 +231,16 @@
 						<li><a href="">Dropdown Menu 4</a></li>
 					</ul>
 				</li>
-				<li><a href="">My Portfolio</a></li>
 				<li><a href="">Blog</a></li>
-				<li><a href="">Contact</a></li>
-				<li><a href="">Map</a></li>
 				<li><a href="">News Latter <i class="fas fa-angle-down"></i></a>
 					<ul>
-						<li><a href="">Dropdown Menu 1</a></li>
+						<li><a href="">Media 1</a></li>
 						<li><a href="">Dropdown Menu 2</a></li>
 						<li><a href="">Dropdown Menu 3</a></li>
 						<li><a href="">Dropdown Menu 4</a></li>
 					</ul>
 				</li>
+				<li><a href="">Contact</a></li>
 			</ul>
 		</div>
 	</div>
